<resources>
    <string name="app_name">Tugas2</string>
    <string name="login_name">Login</string>
    <string name="register_name">Register</string>
    <string name="dashboard_name">Dashboard</string>

    <string name="regis_txt_username">Username</string>
    <string name="regis_txt_pass">Password</string>
    <string name="regis_txt_repass">Retype Password</string>
    <string name="regis_txt_email">Email</string>
    <string name="regis_txt_phone">Phone Number</string>
    <string name="regis_txt_male">Male</string>
    <string name="regis_txt_female">Female</string>
    <string name="regis_txt_bloodtype">Blood Type : </string>
    <string name="regis_txt_reshus">Reshus</string>
    <string name="regis_txt_personal">Personal</string>
    <string name="regis_txt_organization">Organization</string>
    <string name="regis_txt_job">Job</string>
    <string name="regis_txt_homeaddress">Home Address</string>
    <string name="regis_txt_defaultloc">Default Location</string>
    <string name="regis_txt_aggreeterm">Agree with Terms and Conditions</string>
    <string name="almost_there">Almost There</string>
    <string name="almost_verify">Verify</string>
    <string name="verify_send_code">We have send verification code to your email</string>
    <string name="verify_enter_code">Enter verification code here...</string>
    <string name="verify_send">Send</string>
    <string name="verify_doesnt_code">Doesn\'t get a code?</string>
    <string name="verify_resend"><b> Resend</b></string>
    <string name="verify_account">Verify your Account</string>
    <string name="almost_thanks">Thank you for registering with us. One more step, You need to check your email to active your account</string>

    <string name="home_blood_give">Blood Give</string>
    <string name="home_blood_received">Blood Received</string>
    <string name="home_thanks">Thanks</string>
    <string name="home_search_donor">Seach Donor</string>
    <string name="home_blodd_needed">Blood Needed</string>
    <string name="home_message">Message</string>
    <string name="home_donor_history">Donor History</string>



    <string-array name="blood_type">
        <item>Blood Type</item>
        <item>A</item>
        <item>B</item>
        <item>AB</item>
        <item>O</item>
    </string-array>

    <string-array name="reshus">
        <item>Reshus</item>
        <item>+</item>
        <item>-</item>
    </string-array>
    <string-array name="job">
        <item>Job</item>
        <item>Enterpreneur</item>
        <item>Private Employee</item>
        <item>Public Employee</item>
        <item>other</item>
    </string-array>
</resources>
