<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@android:color/holo_blue_light"
    android:padding="@dimen/dp24"
    tools:context=".VerifyActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_account"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="32sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_send_code"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_margin="@dimen/dp24"
        android:textSize="14sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:hint="@string/verify_enter_code"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/shape_button_white"
        android:text="@string/verify_send"
        android:layout_marginTop="@dimen/dp34"
        android:textColor="@android:color/white"
        android:onClick="verify_btn"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="@dimen/dp8"
    android:gravity="center"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_doesnt_code"
        android:textColor="@android:color/white"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_resend"
        android:textColor="@android:color/white"
        android:textSize="14sp"/>
</LinearLayout>

</LinearLayout>