<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <Toolbar
        android:id="@+id/regis_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp64"
        android:background="@drawable/ic_header">

        <ImageView
            android:id="@+id/back_bar"
            android:layout_width="@dimen/dp34"
            android:layout_height="@dimen/dp34"
            android:onClick="back_act"
            android:src="@drawable/ic_header_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp34"
            android:text="@string/register_name"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dp24">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:layout_marginBottom="@dimen/dp8"
            android:autofillHints="@string/regis_txt_username"
            android:hint="@string/regis_txt_username"
            android:inputType="text"
            android:textColor="@android:color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:layout_marginBottom="@dimen/dp8"
            android:autofillHints="@string/regis_txt_email"
            android:hint="@string/regis_txt_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:layout_marginBottom="@dimen/dp8"
            android:autofillHints="@string/regis_txt_phone"
            android:hint="@string/regis_txt_phone"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/regis_txt_male" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/regis_txt_female" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/sp_bloodtype"
                android:layout_width="120dp"
                android:layout_height="@dimen/dp34"
                android:layout_weight="1"
                android:entries="@array/blood_type" />

            <Spinner
                android:id="@+id/sp_reshus"
                android:layout_width="120dp"
                android:layout_height="@dimen/dp34"
                android:layout_weight="1"
                android:entries="@array/reshus" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:layout_marginBottom="@dimen/dp8"
            android:autofillHints="@string/regis_txt_pass"
            android:hint="@string/regis_txt_pass"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:layout_marginBottom="@dimen/dp8"
            android:autofillHints="@string/regis_txt_repass"
            android:hint="@string/regis_txt_repass"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/regis_txt_personal" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/regis_txt_organization" />
        </RadioGroup>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp34"
            android:layout_marginBottom="@dimen/dp8"
            android:entries="@array/job" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:layout_marginBottom="@dimen/dp8"
            android:autofillHints="@string/regis_txt_homeaddress"
            android:hint="@string/regis_txt_homeaddress"
            android:inputType="text"
            android:textColor="@android:color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp48"
            android:autofillHints="@string/regis_txt_defaultloc"
            android:background="@drawable/location"
            android:hint="@string/regis_txt_defaultloc"
            android:inputType="text"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="@dimen/dp8"
            android:background="@android:color/darker_gray" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp8"
            android:text="@string/regis_txt_aggreeterm" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp24">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/shape_button_blue"
                android:onClick="regis_btn"
                android:text="@string/register_name" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>