<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@android:color/holo_blue_light"
    android:padding="@dimen/dp24"
    tools:context=".AlmostActivity">

    <TextView
        android:id="@+id/tes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/almost_there"
        android:textColor="@android:color/white"
        android:textSize="40sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/almost_thanks"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_margin="@dimen/dp24"
        android:textSize="14sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/shape_button_white"
        android:text="@string/almost_verify"
        android:layout_marginTop="@dimen/dp34"
        android:textColor="@android:color/white"
        android:onClick="verify_btn"/>
</LinearLayout>