<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/cover"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/ic_header" />

            <ImageView
                android:id="@+id/side_burger"
                android:layout_width="@dimen/dp34"
                android:layout_height="@dimen/dp34"
                android:src="@drawable/ic_side_menu"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/dp12"/>
            <ImageView
                android:id="@+id/side_burger"
                android:layout_width="@dimen/dp34"
                android:layout_height="@dimen/dp34"
                android:src="@drawable/ic_notification"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/dp12"/>

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/cover"
                android:layout_centerInParent="true"
                android:layout_marginTop="-50dp"
                android:background="@drawable/rounded_profile"
                android:padding="18dp"
                android:src="@drawable/ic_profile_default_small" />

        </RelativeLayout>

        <TextView
            android:id="@+id/nama_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp24"
            android:layout_below="@+id/profile_imageview"
            android:paddingTop="@dimen/dp8"
            android:text="NAMA"
            android:textSize="@dimen/sp24"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_light" />

        <TextView
            android:id="@+id/bloodtype_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nama_textview"
            android:paddingTop="@dimen/dp8"
            android:text="@string/regis_txt_bloodtype"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp24">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="75"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="@dimen/sp24"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Blood give"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp12" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="101"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="@dimen/sp24"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Blood Received"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp12" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="331"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="@dimen/sp24"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="thanks"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp12" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dp24">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/search_imgv"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/rounded_blue_icon"
                        android:src="@drawable/ic_search_donor" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_search_donor"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Search donor near you"
                        android:textSize="@dimen/sp12"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/blood_need_imgv"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_blue_icon"
                        android:src="@drawable/ic_blood_needed" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_blodd_needed"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4 Users need blood"
                        android:textSize="@dimen/sp12"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/message_imgv"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/rounded_blue_icon"
                        android:src="@drawable/ic_message" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_message"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="8 New Message"
                        android:textSize="@dimen/sp12"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/history_imgv"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_blue_icon"
                        android:src="@drawable/ic_donor_history" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_donor_history"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3 Gives, 1 Received"
                        android:textSize="@dimen/sp12"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>